<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 nacamar GmbH - Ybrid®, a Hybrid Dynamic Live Audio Technology
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/status_ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/status_display"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_play" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_chainStyle="spread"/>
    <Button
            android:text="@string/label_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_play"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/button_swap"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@+id/status_display"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toTopOf="@+id/button_change_uri"/>
    <Button
            android:text="@string/label_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_stop"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/button_swap"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toTopOf="@+id/button_play"/>
    <Button
            android:text="@string/label_swap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_swap"
            app:layout_constraintStart_toEndOf="@+id/button_play"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button_stop"
            app:layout_constraintTop_toTopOf="@+id/button_play"/>
    <Button
            android:text="@string/label_change_URI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_change_uri"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_play"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>